# AegisHire

./: .dockerignore  .env.example  .gitignore  DELIVERY_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INTERVIEW_MODULE_INTEGRATION.md  Project.md  QUICK_START.md  RUNNING.md  docker-compose.yml  last review.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_summary.md  readme.md  structure.md
.github/: ISSUES_ROADMAP.md  PR_DESCRIPTION.md
apps/worker/: .env.example  .gitignore  Dockerfile  README.md  README_CV_PARSER.md  config.py  main.py  pyproject.toml  reporting.py  requirements.txt  test_interviewer.py  upload.html
apps/worker/assessment/: __init__.py  router.py
apps/worker/github/: analyser.py  fetcher.py  neo4j_writer.py  router.py
apps/worker/graph_skill/: README.md  builder.py  main.py  pyproject.toml  requirements.txt
apps/worker/graph_skill/graph_skill_db/: __init__.py  builder.py
apps/worker/interviewer/: dev_app.py  dev_frontend.html  generator.py  interviewer.py  job_context.json  router.py  schemas.py  service.py
apps/worker/matching/: __init__.py  comparison_agent.py  explanation_agent.py  gap_report_agent.py  job_parser_agent.py  neo4j_reader.py  schemas.py  utils.py
apps/worker/parsers/: cvParser.py
apps/worker/tests/: test_gap_report_agent.py
apps/worker/tests/fixtures/: gap_report_worker_response.json
apps/worker/worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: AI_APPLICATION_GENERATOR.md  AI_APPLICATION_GENERATOR_INTEGRATION.md  Gap Report Architecture Decision.md  JOB_APPLICATION_FLOW.md  (+2 more)
(+140 files in other folders)
