[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "groq>=0.4.0",
    "langchain==0.3.25",
    "langchain-anthropic==0.3.12",
    "langchain-openai==0.3.17",
    "neo4j>=5.22.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.0",
    "langchain-groq>=0.3.8",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "neo4j>=6.1.0",
]
